--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -104,6 +104,7 @@ div:last-child {
 
 table {
     width: 60%;
+    margin-left: 340px;
 }
 
 td button {
@@ -112,6 +113,7 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+
 }
 
 .container-do-search {
@@ -128,6 +130,7 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    margin-left: 640px;
 }
 
 #back-button:hover {
