--- a/modulo1/projeto-portfolio/index.css
+++ b/modulo1/projeto-portfolio/index.css
@@ -77,7 +77,7 @@ h2{
     border-radius: 15px 15px;
 }
 .lista-experiencia{ 
-    background-color:rgba(239, 193, 156, 0.427);
+    background-color:rgba(252, 240, 222, 0.656);
     padding-left: 4vw;
     padding-right: 4vw;
     padding-bottom: 4vh;
@@ -131,6 +131,14 @@ h2{
     margin-top: 2vh;
     margin-left: 19vw;
 }
+.faixa-projeto{
+    background-color: rgb(96, 57, 105);
+    color:coral;
+    text-align: center;
+    margin-top: 4vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
   #titulo-habilidades-comp{
     /* text-align: center; */
     /* padding-top: 15vh; */
@@ -151,4 +159,48 @@ h2{
 .texto-habilidades-tec{
    text-align:justify;
    margin: 2vh 10vw 0 10vw;
+}
+
+
+
+
+.linkedin-icon{
+    max-height: 4vh;
+    width: auto; 
+    height: auto;
+}
+.linkedin-link{
+    max-height: 4vh;
+    width: auto; 
+    height: auto;
+}
+.github-icon{
+    max-height: 3vh;
+    width: auto; 
+    height: auto; 
+}
+.github-link{
+    max-height: 4vh;
+    width: auto; 
+    height: auto;
+    margin-left:10vw;
+}
+.instagram-icon{
+    max-height: 3vh;
+    width: auto; 
+    height: auto;
+}
+.instagram-link{
+    max-height: 4vh;
+    width: auto; 
+    height: auto;
+    margin-left:10vw;
+}
+.rodape{
+     /* position: absolute; */
+    bottom:0;  
+    background-color: rgba(255, 127, 80, 0.415);
+    text-align: center; 
+    line-height: 10vh ;
+    margin-top: 5vh;
 }
