--- a/modulo1/projeto-portfolio/index.css
+++ b/modulo1/projeto-portfolio/index.css
@@ -160,10 +160,6 @@ h2{
    text-align:justify;
    margin: 2vh 10vw 0 10vw;
 }
-
-
-
-
 .linkedin-icon{
     max-height: 4vh;
     width: auto; 
@@ -198,7 +194,7 @@ h2{
 }
 .rodape{
      /* position: absolute; */
-    bottom:0;  
+    /* bottom:0;   */
     background-color: rgba(255, 127, 80, 0.415);
     text-align: center; 
     line-height: 10vh ;
