--- a/modulo1/css-labetube/video1.css
+++ b/modulo1/css-labetube/video1.css
@@ -25,7 +25,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* padding: 0 8px; */
+    padding: 0 8px;
     color: antiquewhite;
     width: 100vw;
 }
