--- a/modulo1/css-labetube/video2.css
+++ b/modulo1/css-labetube/video2.css
@@ -33,10 +33,10 @@ header {
 main {
     display: flex;
     background-color:rgba(0, 0, 0, 0.738);
-    /* grid-column: 1 / -1;
+    grid-column: 1 / -1;
     grid-template-columns: 1fr ; 
     grid-template-rows: 1fr;
-    gap: 8px; */ 
+    gap: 8px; 
     width: 100vw;
   justify-content: center;
   align-items: center;
@@ -53,7 +53,7 @@ main {
     justify-content: center;
     /* grid-column: 1/ 4;
     grid-row: 1/ 4; */
-   width: 60vw;
+   width: 100vw;
    height: 70vh;
 }
 .titulo-video{
