--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -27,6 +27,7 @@ header {
     justify-content: space-between;
     padding: 0 8px;
     color: antiquewhite;
+   
 }
 
 main {
@@ -171,4 +172,10 @@ footer {
     justify-content: center;
     align-items: center;
     font-style: italic;
+}
+
+@media screen and (min-width:320px) {
+    .container {
+        width: 100%;
+    }
 }
