--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -174,7 +174,7 @@ footer {
     font-style: italic;
 }
 
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:480px) {
     .container {
         width: 100%;
     }
